Add Firestore config, admin auth guard, and CruisaPalooza admin routes
- Add service-account.json to .gitignore and Firestore rules to firebase.json
- Add react-simple-maps dependency and @/services/* path alias
- Update AuthGuard to check admin role and redirect non-admins to 403
- Add isAdmin state to FirebaseAuthContext using custom claims from ID token
- Switch from JWT to Firebase auth in useAuth hook
- Remove demo credentials and sign-up link from SignIn component, redirect to /activity
- Update

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -11,6 +11,7 @@
       "@/pages/*": ["pages/*"],
       "@/redux/*": ["redux/*"],
       "@/theme/*": ["theme/*"],
+      "@/services/*": ["services/*"],
       "@/utils/*": ["utils/*"],
       "@/vendor/*": ["vendor/*"],
 
