--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     "react-quill-new": "3.6.0",
     "react-redux": "9.2.0",
     "react-router-dom": "7.8.2",
+    "react-simple-maps": "^3.0.0",
     "react-syntax-highlighter": "15.6.6",
     "redux": "5.0.1",
     "redux-thunk": "3.1.0",
